# vk-cpp

./: .gitignore  .trav.txt  .travis.yml  install.sh  readme.md
ci/: install-linux.sh  install-osx.sh
homework_1_5/: CMakeLists.txt  constants.h  coverage.html  install.sh  letter.c  letter.h  main.c
homework_1_5/inc/: constants.h  letter.h
homework_1_5/src/: letter.c  main.c
homework_1_5/unit_tests/: complexContentLetter.txt  letterWithoutEnd.txt  oneStringContent.txt  russianLetter.txt  spamInContent.txt  spamInRecipient.txt  spamInSender.txt  spamInTopic.txt  testLetter.cpp
homework_2_5/: CMakeLists.txt  plan.md
homework_2_5/coverage/: coverage.html  coverage.lib_my_dynamic_lib_src_dynamic_differences.c.html  coverage.lib_my_dynamic_lib_unit_tests_src_dynamic_differences_test.cpp.html  coverage.lib_my_dynamic_lib_unit_tests_src_main_test.cpp.html  coverage.lib_my_static_lib_src_static_differences.c.html  coverage.lib_my_static_lib_unit_tests_src_main_test.cpp.html  coverage.lib_my_static_lib_unit_tests_src_static_differences_test.cpp.html  coverage.src_create_binary_file.c.html  coverage.src_main.c.html
homework_2_5/inc/: constants.h  create_binary_file.h
homework_2_5/lib/my_dynamic_lib/: CMakeLists.txt
homework_2_5/lib/my_dynamic_lib/inc/: constants.h  dynamic_differences.h
homework_2_5/lib/my_dynamic_lib/src/: dynamic_differences.c
homework_2_5/lib/my_dynamic_lib/unit_tests/: CMakeLists.txt
homework_2_5/lib/my_dynamic_lib/unit_tests/src/: dynamic_differences_test.cpp  single_value_test
homework_2_5/lib/my_static_lib/: CMakeLists.txt
homework_2_5/lib/my_static_lib/inc/: constants.h  static_differences.h
homework_2_5/lib/my_static_lib/src/: static_differences.c
homework_2_5/lib/my_static_lib/unit_tests/: CMakeLists.txt
homework_2_5/lib/my_static_lib/unit_tests/src/: multiple_values_test  static_differences_test.cpp  two_values_test
homework_2_5/src/: create_binary_file.c  main.c
